2014-01-18  Barton E. Schaefer  <schaefer@zsh.org>

	* 32283: Src/Zle/complist.c: avoid using a negative number for
	available vertical space when the terminal has only a small number
	of lines; fixes crash in menu selection

2014-01-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Daniel Hahler: 32271: Doc/Zsh/compsys.yo: fix matcher list
	example.

2014-01-17  Peter Stephenson  <p.stephenson@samsung.com>

	* sergio: 32267: Completion/Linux/Command/_modutils: modinfo may
	not be in user's path, so use explicit path as already done for lsmod.

2014-01-17  Frank Terbeck  <ft@bewatermyfriend.org>

	* 32264: Functions/VCS_Info/Backends/VCS_INFO_detect_hg: vcs_info,
	hg: Support detecting repos using ShareExtension

2014-01-16  Barton E. Schaefer  <schaefer@zsh.org>

	* Thomas Mitterfellner: 32265: Completion/openSUSE/Command/_zypper:
	better handling of large lists of packages

2014-01-16  Peter Stephenson  <p.stephenson@samsung.com>

	*  Holger Macht: 32257: Completion/openSUSE/Command/_zypper:
	updates.

2014-01-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 32255: Completion/Unix/Command/_python: complete for Python
	with command names python2.4 ... python3.4.

2014-01-11  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32246: Doc/Zsh/builtins.yo, Src/builtin.c, Test/.distfiles,
	Test/B08shift.ztst: add "shift -p" to pop arguments from the end
	of arrays.

2014-01-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Koen Wilde: 32245: Completion/Unix/Command/_mpc: complete more
	arguments.

2014-01-09  Peter Stephenson  <p.stephenson@samsung.com>

	* users/18298 (tidied up): Doc/Zsh/expn.yo, Src/glob.c,
	Test/D09brace.ztst: add {<char>..<char>} expansion.

2014-01-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Mark Oteiza: 32238: suppress error output completing after ip.

2014-01-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: update to 5.0.5-dev-0 to avoid
	installation clash with 5.0.5 release.
